--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+
 body {
   background-color: #101b10;
-  font-family: 'iosevka', 'Open Sans', sans-serif;
+  font-family: 'VT323, sans-serif;
   display: flex;
   
 }
