--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ body {
   background-color: #101b10;
   font-family: 'VT323, sans-serif;
   display: flex;
-  
 }
 
 a {
@@ -14,6 +13,7 @@ a {
 
 .column {
   flex: 50%;
+  padding: 50% 0;
   text-align: center;
 }
 
