--- a/style.css
+++ b/style.css
@@ -1,20 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 
-body {
-  background-color: #101b10;
-  font-family: 'VT323, sans-serif;
-  display: flex;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'VT323', sans-serif;
+  transition: 0.2s ease-in-out;
 }
 
-a {
+body {
+  width: 100vw;
+  height: 100vh;
+  background-color: #101b10;
+  display: flex;
+  align-items: center
+  justify-content: center;
+}
+
+a { 
   color: #50bd63;
   text-decoration: none;
 }
 
 .column {
-  flex: 50%;
-  padding: 50% 0;
-  text-align: center;
+  width: 145vh;
+  height: 85vh;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  grid-gap: 30px;
+  padding: 20px;
 }
-
-
