--- a/style.css
+++ b/style.css
@@ -1,19 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
   font-family: 'VT323', sans-serif;
-  transition: 0.2s ease-in-out;
+  font-size: 32px;
+  transition: 0.1s ease-in-out;
 }
 
-body {
-  width: 100vw;
-  height: 100vh;
+html, body {
+  height: 100%;
+  width: 100%;
   background-color: #101b10;
   display: flex;
-  align-items: center
+  align-items: center;
+  align-content: center;
   justify-content: center;
 }
 
@@ -23,11 +22,9 @@ a {
 }
 
 .column {
-  width: 145vh;
-  height: 85vh;
+  text-align: center;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(4, 1fr);
-  grid-gap: 30px;
-  padding: 20px;
+  grid-template-columns: 360px;
+  grid-template-rows: repeat(3, 60px);
+  grid-gap: 0px;
 }
